# cheeto

./: .bumpversion.cfg  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  _cheeto  pyproject.toml  tox.ini
.opencode/: opencode.jsonc
.opencode/plans/: 1778157651842-tidy-moon.md
src/cheeto/: __init__.py  sheet.py  sheets.py
src/cheeto/scripts/: cheeto.py
src/cheeto/utils/: argparse.py  error.py  markdown.py  path.py  pathlib.py  project_info.py
