[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"


[project]
name = "cheeto"
version = "1.2.1"
description = "Cheat sheet utility"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Andy Gimblett", email = "andy@barefootcode.com"}]
requires-python = ">=3.13,<4"
keywords = [
    "cheat sheet",
    "cheatsheet",
    "shell",
    "terminal",
    "utility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Unix Shell",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "argparse-formatter>=1.4,<2",
    "humanize>=4.12,<4.13",
    "more-itertools>=10.7,<10.8",
    "platformdirs>=4.3,<4.4",
    "rich>=14.1,<14.2",
]

[dependency-groups]
dev = [
    "coverage>=7.10,<7.11",
    "mypy>=1.17,<1.18",
    "pre-commit>=4,<5",
    "pytest>=8.4,<8.5",
    "pytest-cov>=6.2,<6.3",
    "ruff>=0.12",
]

[project.scripts]
cheeto = "cheeto.scripts.cheeto:main"

[project.entry-points."cheeto.utils.markdown.renderers"]
null = "cheeto.utils.markdown:NullRenderer"
rich = "cheeto.utils.markdown:RichRenderer"
mdcat = "cheeto.utils.markdown:MdcatRenderer"
glow = "cheeto.utils.markdown:GlowRenderer"
glowl = "cheeto.utils.markdown:GlowLightRenderer"

[project.urls]
homepage = "https://github.com/gimbo/cheeto"
repository = "https://github.com/gimbo/cheeto"
documentation = "https://github.com/gimbo/cheeto"


[tool.bumpversion]
current_version = "1.2.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "uv.lock"
search = "[[package]]\nname = \"cheeto\"\nversion = \"{current_version}\""
replace = "[[package]]\nname = \"cheeto\"\nversion = \"{new_version}\""


[tool.coverage.run]
branch = true
source_pkgs = ["cheeto"]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.html]
skip_covered = false
skip_empty = true


[tool.pytest.ini_options]
addopts = """
    --doctest-modules
    --cov
    --cov-config=pyproject.toml
    --cov-report term
    --cov-report html
    --no-cov-on-fail
"""
xfail_strict = true
